<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <TextView
        android:id="@+id/command_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command_name_label" />

    <TextView
        android:id="@+id/command_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/command_name_field"
        android:text="@string/example_field" />

    <TextView
        android:id="@+id/command_description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/command_name"
        android:text="@string/command_description_label" />

    <TextView
        android:id="@+id/command_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/command_description_field"
        android:text="@string/example_field"  />

    <TextView
        android:id="@+id/command_exec_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/command_description"
        android:text="@string/command_exec_label" />

    <TextView
        android:id="@+id/command_exec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/command_exec_field"
        android:paddingLeft="5dp"
        android:text="@string/example_field"  />

    <TextView
        android:id="@+id/command_output_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/command_exec"
        android:text="@string/command_output_label" />

    <ScrollView
        android:id="@+id/command_output_scroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/command_output_field" >

        <TextView
            android:id="@+id/command_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_field"  />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/command_output_scroll" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/run_button" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/done_button" />
    </LinearLayout>

</RelativeLayout>